fix/LW-8182 - Alignment Issues (#460)
* fix(core): remove margin-right global rule for .anticon

ref: LW-8182

* fix: move css rules for pool search component to common package

ref: LW-8182

--- a/packages/core/src/ui/components/EditAddressForm/EditAddressForm.module.scss
+++ b/packages/core/src/ui/components/EditAddressForm/EditAddressForm.module.scss
@@ -138,7 +138,6 @@ $drawer-width: 664px;
 
 :global(.anticon) {
   font-size: size_unit(2.5);
-  margin-right: size_unit(1);
   
   &.valid {
     color: var(--text-color-green);
